fix: allow disabling secure login cookie

--- a/env.example
+++ b/env.example
@@ -8,6 +8,8 @@ POSTGRES_URL=postgresql://postgres:postgres123@localhost:5432/smartcourse
 JWT_SECRET=your-secret-key-change-in-production
 NEXTAUTH_SECRET=your-nextauth-secret-change-in-production
 NEXTAUTH_URL=http://localhost:3000
+# Cookie 安全配置（生产环境保持为 true；HTTP 调试可设为 false）
+# COOKIE_SECURE=true
 
 # Next.js 环境
 NODE_ENV=development
@@ -18,6 +20,5 @@ NODE_ENV=development
 
 # LLM 配置（可选）
 # LLM 配置请在管理后台进行配置，无需在此设置
-
 
 
