--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/Robin021/SmartCourse#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.943.0",
+    "@mermaid-js/mermaid-cli": "^11.12.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
@@ -47,6 +48,7 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.555.0",
     "mammoth": "^1.11.0",
+    "mermaid": "^11.12.2",
     "mongoose": "^9.0.0",
     "next": "^16.0.8",
     "pdf-parse": "^2.4.5",
@@ -55,6 +57,7 @@
     "pgvector": "^0.2.1",
     "postcss": "^8.5.6",
     "pptxgenjs": "^4.0.1",
+    "puppeteer": "^23.11.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
