--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,47 +2,47 @@ version: "3.8"
 
 services:
   # MongoDB - 主数据库
-  mongodb:
-    image: mongo:7.0
-    container_name: smartcourse-mongodb
-    restart: unless-stopped
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin123
-      MONGO_INITDB_DATABASE: smartcourse
-    volumes:
-      - mongodb_data:/data/db
-      - mongodb_config:/data/configdb
-    networks:
-      - smartcourse-network
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+  # mongodb:
+  #   image: mongo:7.0
+  #   container_name: smartcourse-mongodb
+  #   restart: unless-stopped
+  #   ports:
+  #     - "27017:27017"
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: admin
+  #     MONGO_INITDB_ROOT_PASSWORD: admin123
+  #     MONGO_INITDB_DATABASE: smartcourse
+  #   volumes:
+  #     - mongodb_data:/data/db
+  #     - mongodb_config:/data/configdb
+  #   networks:
+  #     - smartcourse-network
+  #   healthcheck:
+  #     test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
 
-  # PostgreSQL with pgvector - 向量数据库
-  postgres:
-    image: pgvector/pgvector:pg16
-    container_name: smartcourse-postgres
-    restart: unless-stopped
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123
-      POSTGRES_DB: smartcourse
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - smartcourse-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+  # # PostgreSQL with pgvector - 向量数据库
+  # postgres:
+  #   image: pgvector/pgvector:pg16
+  #   container_name: smartcourse-postgres
+  #   restart: unless-stopped
+  #   ports:
+  #     - "5432:5432"
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: postgres123
+  #     POSTGRES_DB: smartcourse
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
+  #   networks:
+  #     - smartcourse-network
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U postgres"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
 
   # Next.js 应用（开发模式）
   app:
@@ -79,41 +79,14 @@ services:
         condition: service_healthy
     command: npm run dev
 
-  # Next.js 应用（生产模式）- 可选，取消注释以使用
-  # app-prod:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: smartcourse-app-prod
-  #   restart: unless-stopped
-  #   ports:
-  #     - "3000:3000"
-  #   environment:
-  #     MONGODB_URI: mongodb://admin:admin123@mongodb:27017/smartcourse?authSource=admin
-  #     POSTGRES_URL: postgresql://postgres:postgres123@postgres:5432/smartcourse
-  #     NODE_ENV: production
-  #     JWT_SECRET: ${JWT_SECRET}
-  #     NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
-  #     NEXTAUTH_URL: ${NEXTAUTH_URL}
-  #   networks:
-  #     - smartcourse-network
-  #   depends_on:
-  #     mongodb:
-  #       condition: service_healthy
-  #     postgres:
-  #       condition: service_healthy
-
-volumes:
-  mongodb_data:
-    driver: local
-  mongodb_config:
-    driver: local
-  postgres_data:
-    driver: local
+# volumes:
+#   mongodb_data:
+#     driver: local
+#   mongodb_config:
+#     driver: local
+#   postgres_data:
+#     driver: local
 
 networks:
   smartcourse-network:
     driver: bridge
-
-
-
